<resources>
    <string name="app_name">GenesApp</string>
    <string name="list_item_gene_age_label_title">Происхождение, возраст</string>
    <string name="list_item_gene_name_label_title">HGNC, название</string>
    <string name="list_item_bold_simple_string_format"><![CDATA[<b>%s</b>b> $s]]></string>
    <string name="view_request_error_btn_retry">Повторить</string>

    <!--View request error-->
    <string name="request_error_view_no_connection_title">Возникли проблемы\nс интернет-соединением</string>
    <string name="request_error_view_no_connection_subtitle">Проверьте подключение к интернету\nв настройках и повторите попытку</string>
    <string name="request_error_view_default_title">Произошла ошибка загрузки</string>
    <string name="request_error_view_default_subtitle">Пожалуйста, повторите попытку позднее</string>
    <!---->

    <!--Fragment gene details-->
    <string name="fragment_gene_details_title">Информация о гене</string>
    <string name="fragment_gene_details_born_info_text_format"><![CDATA[<b>%s<br> %s</b> млн. лет]]></string>
    <string name="fragment_gene_details_place_text_format"><![CDATA[<b>Регион:</b> %s<br><b>Положение:</b> %s]]></string>
    <string name="fragment_gene_details_gene_orientation_plus">Плюс-цепь</string>
    <string name="fragment_gene_details_gene_orientation_minus">Минус-цепь</string>
    <string name="fragment_gene_details_born_label_text">Происхождение</string>
    <string name="fragment_gene_details_place_label_text">Расположение на хромосоме</string>
    <string name="fragment_gene_details_function_title">Функции</string>
    <string name="fragment_gene_details_cause_title">Критерии отбора</string>
    <string name="fragment_gene_details_evolution_title">Эволюция</string>
    <!---->

</resources>